--- a/requirements.txt
+++ b/requirements.txt
@@ -1,206 +1,76 @@
-absl-py==0.12.0
-altair==4.1.0
-argon2-cffi==20.1.0
-astor==0.8.1
+absl-py==1.4.0
+altair==5.0.1
 astunparse==1.6.3
-async-generator==1.10
-attrs==21.2.0
-backcall==0.2.0
-base58==2.1.0
-bleach==3.3.0
-blinker==1.4
-cachetools==4.2.2
-certifi==2020.12.5
-cffi==1.14.5
-chardet==4.0.0
-click==7.1.2
-decorator==5.0.9
-defusedxml==0.7.1
-entrypoints==0.3
-gast==0.3.3
-gitdb==4.0.7
-GitPython==3.1.17
-google-auth==1.30.1
-google-auth-oauthlib==0.4.4
+attrs==23.1.0
+blinker==1.6.2
+cachetools==5.3.1
+certifi==2023.5.7
+charset-normalizer==3.1.0
+click==8.1.3
+decorator==5.1.1
+flatbuffers==23.5.26
+gast==0.4.0
+gitdb==4.0.10
+GitPython==3.1.31
+google-auth==2.20.0
+google-auth-oauthlib==1.0.0
 google-pasta==0.2.0
-grpcio==1.38.0
-h5py==2.10.0
-idna==2.10
-ipykernel==5.5.5
-ipython==7.23.1
-ipython-genutils==0.2.0
-ipywidgets==7.6.3
-jedi==0.18.0
-Jinja2==3.0.1
-jsonschema==3.2.0
-jupyter-client==6.1.12
-jupyter-core==4.7.1
-jupyterlab-pygments==0.1.2
-jupyterlab-widgets==1.0.0
-Keras-Preprocessing==1.1.2
-Markdown==3.3.4
-MarkupSafe==2.0.1
-matplotlib-inline==0.1.2
-mistune==0.8.4
-nbclient==0.5.3
-nbconvert==6.0.7
-nbformat==5.1.3
-nest-asyncio==1.5.1
-notebook==6.4.0
-numpy==1.18.5
-oauthlib==3.1.0
-opencv-python-headless==4.5.1.48
+grpcio==1.54.2
+h5py==3.9.0
+idna==3.4
+importlib-metadata==6.7.0
+jax==0.4.12
+Jinja2==3.1.2
+jsonschema==4.17.3
+keras==2.12.0
+libclang==16.0.0
+Markdown==3.4.3
+markdown-it-py==3.0.0
+MarkupSafe==2.1.3
+mdurl==0.1.2
+ml-dtypes==0.2.0
+numpy==1.23.5
+oauthlib==3.2.2
+opencv-python==4.7.0.72
 opt-einsum==3.3.0
-packaging==20.9
-pandas==1.2.4
-pandocfilters==1.4.3
-parso==0.8.2
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==8.2.0
-prometheus-client==0.10.1
-prompt-toolkit==3.0.18
-protobuf==3.17.1
-ptyprocess==0.7.0
-pyarrow==4.0.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.20
-pydeck==0.6.2
-Pygments==2.9.0
-pyparsing==2.4.7
-pyrsistent==0.17.3
-python-dateutil==2.8.1
-pytz==2021.1
-pyzmq==22.1.0
-requests==2.25.1
-requests-oauthlib==1.3.0
-rsa==4.7.2
-Send2Trash==1.5.0
+packaging==23.1
+pandas==2.0.2
+Pillow==9.5.0
+protobuf==4.23.3
+pyarrow==12.0.1
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pydeck==0.8.1b0
+Pygments==2.15.1
+Pympler==1.0.1
+pyrsistent==0.19.3
+python-dateutil==2.8.2
+pytz==2023.3
+pytz-deprecation-shim==0.1.0.post0
+requests==2.31.0
+requests-oauthlib==1.3.1
+rich==13.4.2
+rsa==4.9
+scipy==1.10.1
 six==1.16.0
-smmap==4.0.0
-streamlit==0.82.0
-tensorboard==2.5.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.0
-tensorflow==2.3.2
-tensorflow-estimator==2.3.0
-termcolor==1.1.0
-terminado==0.10.0
-testpath==0.5.0
+smmap==5.0.0
+streamlit==1.23.1
+tenacity==8.2.2
+tensorboard==2.12.3
+tensorboard-data-server==0.7.1
+tensorflow==2.12.0
+tensorflow-estimator==2.12.0
+tensorflow-io-gcs-filesystem==0.32.0
+termcolor==2.3.0
 toml==0.10.2
-toolz==0.11.1
-tornado==6.1
-traitlets==5.0.5
-tzlocal==2.1
-urllib3==1.26.5
-validators==0.18.2
-watchdog==2.1.2
-wcwidth==0.2.5
-webencodings==0.5.1
-Werkzeug==2.0.1
-widgetsnbextension==3.5.1
-wrapt==1.12.1
-absl-py==0.12.0
-altair==4.1.0
-argon2-cffi==20.1.0
-astor==0.8.1
-astunparse==1.6.3
-async-generator==1.10
-attrs==21.2.0
-backcall==0.2.0
-base58==2.1.0
-bleach==3.3.0
-blinker==1.4
-cachetools==4.2.2
-certifi==2020.12.5
-cffi==1.14.5
-chardet==4.0.0
-click==7.1.2
-decorator==5.0.9
-defusedxml==0.7.1
-entrypoints==0.3
-gast==0.3.3
-gitdb==4.0.7
-GitPython==3.1.17
-google-auth==1.30.1
-google-auth-oauthlib==0.4.4
-google-pasta==0.2.0
-grpcio==1.38.0
-h5py==2.10.0
-idna==2.10
-ipykernel==5.5.5
-ipython==7.23.1
-ipython-genutils==0.2.0
-ipywidgets==7.6.3
-jedi==0.18.0
-Jinja2==3.0.1
-jsonschema==3.2.0
-jupyter-client==6.1.12
-jupyter-core==4.7.1
-jupyterlab-pygments==0.1.2
-jupyterlab-widgets==1.0.0
-Keras-Preprocessing==1.1.2
-Markdown==3.3.4
-MarkupSafe==2.0.1
-matplotlib-inline==0.1.2
-mistune==0.8.4
-nbclient==0.5.3
-nbconvert==6.0.7
-nbformat==5.1.3
-nest-asyncio==1.5.1
-notebook==6.4.0
-numpy==1.18.5
-oauthlib==3.1.0
-opencv-python==4.5.2.52
-opt-einsum==3.3.0
-packaging==20.9
-pandas==1.2.4
-pandocfilters==1.4.3
-parso==0.8.2
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==8.2.0
-prometheus-client==0.10.1
-prompt-toolkit==3.0.18
-protobuf==3.17.1
-ptyprocess==0.7.0
-pyarrow==4.0.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.20
-pydeck==0.6.2
-Pygments==2.9.0
-pyparsing==2.4.7
-pyrsistent==0.17.3
-python-dateutil==2.8.1
-pytz==2021.1
-pyzmq==22.1.0
-requests==2.25.1
-requests-oauthlib==1.3.0
-rsa==4.7.2
-Send2Trash==1.5.0
-six==1.16.0
-smmap==4.0.0
-streamlit==0.82.0
-tensorboard==2.5.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.0
-tensorflow==2.3.2
-tensorflow-estimator==2.3.0
-termcolor==1.1.0
-terminado==0.10.0
-testpath==0.5.0
-toml==0.10.2
-toolz==0.11.1
-tornado==6.1
-traitlets==5.0.5
-tzlocal==2.1
-urllib3==1.26.5
-validators==0.18.2
-watchdog==2.1.2
-wcwidth==0.2.5
-webencodings==0.5.1
-Werkzeug==2.0.1
-widgetsnbextension==3.5.1
-wrapt==1.12.1
+toolz==0.12.0
+tornado==6.3.2
+typing_extensions==4.6.3
+tzdata==2023.3
+tzlocal==4.3.1
+urllib3==1.26.16
+validators==0.20.0
+watchdog==3.0.0
+Werkzeug==2.3.6
+wrapt==1.14.1
+zipp==3.15.0
