--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,3 @@
-numpy==1.23.5
-opencv-python==4.7.0.72
-pandas==2.0.2
-Pillow==9.5.0
-requests==2.31.0
-requests-oauthlib==1.3.1
-rich==13.4.2
-rsa==4.9
-scipy==1.10.1
-six==1.16.0
-smmap==5.0.0
-streamlit==1.23.1
-tenacity==8.2.2
-tensorboard==2.12.3
-tensorboard-data-server==0.7.1
-tensorflow==2.12.0
-tensorflow-estimator==2.12.0
-tensorflow-io-gcs-filesystem==0.32.0
-termcolor==2.3.0
-toml==0.10.2
-toolz==0.12.0
-tornado==6.3.2
-typing_extensions==4.6.3
-tzdata==2023.3
-tzlocal==4.3.1
-urllib3==1.26.16
-validators==0.20.0
-watchdog==3.0.0
+streamlit
+tensorflow
+watchdog
